--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,35 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+.filtre {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	column-gap: 10px;
+	margin-bottom: 50px;
+	margin-top: 50px;
+}
+
+.filtre button {
+	padding: 5px 15px;
+	background-color: #ffff;
+	border: solid 1px #1D6154;
+	border-radius: 60px;
+	font-family: Syne;
+	color: #1D6154;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 19px;
+}
+
+.filtre button:hover {
+	background-color: #1D6154;
+	color: #ffff;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
